# ana

./: Dockerfile  Makefile  README.md  build_alpha.sh  build_bravo.sh  docker-compose.yml  main.py  provision.sh  pyproject.toml  test_ana.sh  test_e2e.py
apps/actor/: main.py  pyproject.toml
apps/actor/src/actor/: config.yaml  main.py
apps/actor/src/actor/domain/: ports.py
apps/actor/src/actor/infrastructure/: llm.py
apps/configurator/: main.py  pyproject.toml
apps/configurator/src/configurator/: main.py  settings.yaml
apps/controller/: pyproject.toml
apps/controller/src/controller/: config.yaml  main.py
apps/controller/src/controller/domain/: rules.py
apps/core/actor/: pyproject.toml
apps/core/actor/src/actor/: main.py
apps/core/actor/src/actor/application/: handlers.py
apps/core/actor/src/actor/domain/: classifier.py  extractor.py
apps/core/controller/: pyproject.toml
apps/core/controller/src/controller/: infrastructure.py  main.py
apps/core/controller/src/controller/domain/: decisions.py  rules.py
apps/core/interface/: pyproject.toml
apps/core/interface/src/interface/: main.py
apps/core/interface/src/interface/infrastructure/: clients.py
apps/core/memory/: pyproject.toml
apps/core/memory/migrations/: env.py
apps/core/memory/migrations/versions/: 90be5a38f8bf_init_4_tuple_quad_store_architecture.py  f69da9d4ed00_init_neurosymbolic_world_model.py
apps/core/memory/src/memory/: main.py
apps/core/memory/src/memory/domain/: models.py
apps/core/memory/src/memory/infrastructure/: database.py  repository.py
apps/edge/: pyproject.toml
apps/edge/etl/: Dockerfile  pyproject.toml
apps/edge/etl/src/etl/: main.py
apps/edge/scraper/: pyproject.toml
apps/edge/scraper/src/scraper/: main.py
apps/edge/scraper/tests/: test_scraper.py
apps/edge/store/: pyproject.toml
apps/edge/store/src/store/: main.py
apps/edge/store/tests/: test_store.py
apps/inspector/: main.py  pyproject.toml
apps/inspector/src/inspector/: config.yaml  main.py
apps/inspector/src/inspector/templates/: base.html  dashboard.html  database.html  database_table.html  store.html  store_table.html
apps/interface/: pyproject.toml
apps/interface/src/interface/: config.yaml  main.py
apps/interface/src/interface/adapters/: handlers.py  sources.py
apps/interface/src/interface/domain/: ports.py
apps/interface/src/interface/infrastructure/: clients.py
apps/memory/: pyproject.toml
apps/memory/src/memory/: config.yaml  main.py
apps/memory/src/memory/domain/: models.py
apps/store/: pyproject.toml
apps/store/src/store/: config.yaml  main.py
apps/store/src/store/domain/: models.py
apps/store/src/store/infrastructure/: storage.py
backup/: inbound_node_proxy.py
cli/: main.py
config/: scheduler.yaml  scheduler.yml
dbschema/: default.gel
dbschema/migrations/: 00001-m1wzsh3.edgeql
prompts/: .india.md.kate-swp  adapters.py  alpha.md  bravo.md  charlie.md  delta.md  echo-01.md  foxtrot.md  golf.md  hotel.md  india.md  juliet.md  kilo.md  lima.md  mike.md  november.md  oscar.md  papa.md  quebec.md  romeo.md  sierra.md  tango.md  uniform.md
scripts/: cli.py  run.py
src/ana/: application.py  utils.py
src/ana/adapters/: edgedb_graph.py  faststream_bus.py  http_actions.py  local_storage.py  proxy_client.py  registry.py  web_client.py
src/ana/agents/: domain_agents.py  inbound_node.py  reporter_node.py  time_node.py
src/ana/domain/: messages.py  tuples.py
src/ana/ports/: interfaces.py
tests/controller/: test_main.py  test_rules.py
tests/e2e/: test_cascade.py  test_system_e2e.py
tests/etl/: test_etl.py
tests/extractors/: test_http_extractor.py
tests/integration/: test_adapters.py  test_boundary_agents.py  test_domain_agents.py  test_message_bus.py
tests/memory/: test_repository.py
tests/unit/: test_domain.py
(+4 files in other folders)
