[project]
name = "ana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/shared",
    "apps/edge/*",
    "apps/core/*"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "pytest-mock>=3.15.1",
]

