[project]
name = "interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.2",
    "faststream[rabbit]>=0.6.7",
    "httpx>=0.28.1",
    "shared",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
shared = { workspace = true }
