[project]
name = "store"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
